[tool.poetry]
name = "shared-dependency"
version = "0.1.0"
description = ""
authors = ["abefrandsen <abe.frandsen@envedabio.com>"]
readme = "README.md"
packages = [{include = "shared_dependency"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
